--- a/index.html
+++ b/index.html
@@ -6,12 +6,53 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="sass/main.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
         <title>nexter &mdash; your home, your freedom</title>
     </head>
+
     <body class="container">
-        TEST TEXT
+
+        <div class="sidebar">
+            Sidebar
+        </div>
+
+        <header class="header">
+            header
+        </header>
+
+        <div class="realtors">
+            Top 3 realtors
+        </div>
+
+        <section class="features">
+            features
+        </section>
+
+        <div class="story__pictures">
+            story pictures
+        </div>
+
+        <div class="story__content">
+            story content
+        </div>
+
+        <section class="homes">
+            homes
+        </section>
+
+        <section class="gallery">
+            gallery
+        </section>
+
+        <footer class="footer">
+            footer
+        </footer>
+
+
+
+
     </body>
+
 </html>
