1st commit since branching

--- a/index.html
+++ b/index.html
@@ -27,7 +27,53 @@
         </div>
 
         <section class="features">
-            features
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-global"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam inventore exercitationem minus commodi repudiandae.</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-trophy"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quam cupiditate cumque adipisci quisquam.</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptatibus nulla voluptates. Nostrum accusamus commodi.</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">New home in one week</h4>
+                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus inventore earum repellendus fugiat officiis.</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-presentation"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, ea unde, facilis mollitia sed illum sit eos nam excepturi!</p>
+            </div>
+
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-lock"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Secure payments on Nexter</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore dolor porro ex perferendis quod.</p>
+            </div>
         </section>
 
         <div class="story__pictures">
