--- a/index.html
+++ b/index.html
@@ -15,11 +15,21 @@
     <body class="container">
 
         <div class="sidebar">
-            Sidebar
+            <button class="nav-btn"></button>
         </div>
 
         <header class="header">
-            header
+            <img src="img/logo.png" alt="Nexter logo" class="header__logo">
+            <h3 class="heading-3">Your own home:</h3>
+            <h1 class="heading-1">The ultimate personal freedom</h1>
+            <button class="btn header__btn">View our properties</button>
+            <div class="header__seenon-text">As seen on</div>
+            <div class="header__seenon-logos">
+                <img src="img/logo-bbc.png" alt="seen on logo 1">
+                <img src="img/logo-forbes.png" alt="seen on logo 2">
+                <img src="img/logo-techcrunch.png" alt="seen on logo 3">
+                <img src="img/logo-bi.png" alt="seen on logo 4">
+            </div>
         </header>
 
         <div class="realtors">
@@ -358,7 +368,17 @@
         </section>
 
         <footer class="footer">
-            footer
+            <ul class="nav">
+                <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
+            </ul>
+            <p class="copyright">
+                &copy; Copyright 2022 by Daniel White. From Jonas Schmedtmann course.
+            </p>
         </footer>
 
 
